fix overflow

--- a/scss/base.scss
+++ b/scss/base.scss
@@ -19,6 +19,7 @@ body {
   font-size: 14px;
   width: 100%;
   max-width: 100%;
+  overflow-x: hidden;
 }
 
 #header {
